hard-gists/4c2d4105ea2c7e407fb5/run.log
=== Docker Run Log for 4c2d4105ea2c7e407fb5 ===
Started at: Mi 29. Okt 15:09:49 CET 2025

[2025-10-29 15:09:50] START: Running container for 4c2d4105ea2c7e407fb5
[2025-10-29 15:09:50] SUCCESS: Container 89d7e6ae5ddbde99bcc4a99f09f92a502497f0b243bc88cc24ece52f60ecd61b started for 4c2d4105ea2c7e407fb5
=== Container logs for 4c2d4105ea2c7e407fb5 ===
  File "/snippet.py", line 30
    print "* shape of the corpus", len(corpus)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4c2d4105ea2c7e407fb5 ===
[2025-10-29 15:09:52] INFO: Container 89d7e6ae5ddbde99bcc4a99f09f92a502497f0b243bc88cc24ece52f60ecd61b has stopped
